package com.recipes.domain.recipe;

public enum RecipeStatus {
    DRAFT,
    PUBLISHED,
    ARCHIVED
}