package com.recipes.domain.recipe;

public enum Unit {
    GRAM,
    KILOGRAM,
    MILLILITER,
    LITER,
    PIECE,
    TEASPOON,
    TABLESPOON,
    CUP
}